# great-falls-tool-bus-infra

./: .envrc  .gitignore  .gitleaks.toml  .sops.yaml  AGENTS.md  BUILD.bazel  CHANGELOG.md  Justfile  MODULE.bazel  README.md  flake.nix
.github/workflows/: archive-stack.yml  deploy-arc-runners.yml  edge-drift.yml  edge-plan.yml  flywheel-cache-proof.yml  form-crs.yml  form-stack.yml  k8s-stack-drift.yml  list-crs.yml  mail-crs.yml  validate.yml  web-crs.yml  web-stack.yml
bazel/flywheel-proof/: .bazelrc  BUILD.bazel  MODULE.bazel
config/: organization.yaml  substrate-boundary-allowlist.json
docs/: ci-credentials.md  discuss-archive-packet.md  edge-apply-runbook.md  implementation-overlay.md  mail-cr-apply-runbook.md  mvp-decision-packet.md  onboarding-runbook.md  profile-assets.md
docs/architecture/: diagrams.md
docs/decisions/: 0001-pr-gated-ephemeral-preview-deploys.md
docs/research/: archive-gate-network-enforcement-2026-07.md  captcha-and-bot-mitigation.md  edge-mail-substrate-2026-07.md  full-oncluster-web-serving-2026-07.md  gloriousflywheel-overlay-leverage-2026-07.md
docs/runbooks/: cf-access-dev-preview-and-github-sso.md  cf-access-google-sso.md  edge-token-and-zones.md  form-intake.md  form-origin-bringup.md  list-bringup.md  list-operations.md  oncluster-web-cutover.md
k8s/archive/latoolb-us-production/: README.md  configmap-anubis-policy.yaml  deployment-anubis-archive.yaml  kustomization.yaml  networkpolicy.yaml  service-anubis-archive.yaml
k8s/form/: README.md
k8s/form/latoolb-us-production/: configmap-anubis-policy.yaml  configmap-form-handler.yaml  deployment-anubis.yaml  deployment-form-handler.yaml  deployment-form-origin.yaml  kustomization.yaml  mailaccount-form-intake.yaml  networkpolicy.yaml  service-anubis.yaml  service-form-handler.yaml  service-form-origin.yaml
k8s/list/: README.md
k8s/list/latoolb-us-production/: configmap-mailman-web-branding.yaml  configmap-mailman.yaml  deployment-mailman-core.yaml  deployment-mailman-web.yaml  deployment-postgres.yaml  kustomization.yaml  mailaccount-lists-bounces.yaml  networkpolicy.yaml  pvcs.yaml  service-mailman-core.yaml  service-mailman-web.yaml  service-postgres.yaml
k8s/mail/: README.md
k8s/mail/latoolb-us-production/: kustomization.yaml  mailaccount-keyholders.yaml  mailalias-rfc2142.yaml  maildomain-latoolb-us.yaml
k8s/web/: README.md  pr-env-lane.md  secrets.contract.yaml
k8s/web/greatfallstoolbus-org-production/: deployment.yaml  kustomization.yaml  networkpolicy.yaml  service.yaml
scripts/: flywheel-cache-proof.sh  flywheel-enroll-verify.sh  test-form-altcha.py  test-overlay-runner-taxonomy.sh  validate-archive-stack.sh  validate-core-checkout.py  validate-form-stack.sh  validate-list-stack.sh  validate-mail-crs.sh  validate-overlay-runner-taxonomy.py  validate-public-operator-surface.py  validate-public-pii-surface.py  validate-substrate-boundary.py  validate-web-stack.sh
secrets/: README.md  edge-dns.enc.yaml
tofu/backend/: honey-edge-dns.s3.hcl  honey-edge.s3.hcl  honey.s3.hcl
tofu/intent/great-falls-tool-bus/: pr-env-lanes.schema.json  web-oncluster-route.json
tofu/stacks/arc-runners/: great-falls-tool-bus.tfvars
tofu/stacks/edge/: .terraform.lock.hcl  README.md  flip.plan  main.tf  outputs.tf  variables.tf  versions.tf
tofu/stacks/edge-dns/: README.md  great-falls-tool-bus.tfvars  main.tf  outputs.tf  variables.tf  versions.tf
