module(
    name = "great-falls-tool-bus-infra",
    version = "0.1.0",
    compatibility_level = 1,
)

bazel_dep(name = "attic-iac", version = "0.1.0")

git_override(
    module_name = "attic-iac",
    remote = "https://github.com/tinyland-inc/GloriousFlywheel.git",
    commit = "2281b576bce0e8dd776a047b84e7464f5b508a62",
)
