# Trivial hermetic target exercised by the org-tenancy cache-backed Bazel soak.
# A pure genrule with no toolchain or external inputs: building it drives a REAPI
# CAS/AC round-trip against the shared cache under the routed
# remote_instance_name (org-great-falls-tool-bus once runtime grants are live),
# which is exactly what the operator observes during the pilot soak. Read-only on
# PRs (the wrapper forwards --remote_upload_local_results=false).
genrule(
    name = "cache_proof",
    outs = ["cache_proof.txt"],
    cmd = "echo gloriousflywheel-org-tenancy-cache-proof:org-great-falls-tool-bus > $@",
    tags = ["flywheel-cache-proof"],
)
